launchpad-buildd (142) UNRELEASED; urgency=medium

  * lpbuildd.binarypackage: Pass DEB_BUILD_OPTIONS=noautodbgsym if we have
    not been told to build debug symbols (LP: #1623256).
  * lpbuildd.slave: Drop compatibility with ancient pre-lucid versions of
    python-apt.
  * lpbuildd.pottery.intltool: Remove unused and Python-3-unfriendly
    string/file conditional from ConfigFile.__init__.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 09 Dec 2016 16:15:49 +0000

launchpad-buildd (141) trusty; urgency=medium

  * buildsnap: Grant access to the proxy during the build phase as well as
    during the pull phase (LP: #1642281).
  * buildsnap: Grant access to the proxy during the repo phase, allowing the
    base branch to be fetched from an external site.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 05 Dec 2016 19:05:50 +0000

launchpad-buildd (140) trusty; urgency=medium

  * buildsnap: Catch urllib2.URLError as well as urllib2.HTTPError when
    trying to revoke the proxy token (LP: #1610916).
  * lpbuildd.snap: Upload *.manifest files as well as *.snap (LP: #1608432).
  * buildsnap: Set https_proxy to an http:// URL rather than https://; the
    former is more accurate anyway and the latter breaks npm (LP: #1588870).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 16 Sep 2016 17:39:12 +0100

launchpad-buildd (139) trusty; urgency=medium

  * buildsnap: Set LANG=C.UTF-8 when running snapcraft.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 05 Apr 2016 16:11:01 +0100

launchpad-buildd (138) trusty; urgency=medium

  [ Colin Watson ]
  * slave-prep: Output current versions of git-build-recipe, git, and
    qemu-user-static.
  * Always raise exception instances rather than using the two-argument form
    of raise.
  * buildsnap: Run just "snapcraft" rather than "snapcraft all"; works with
    snapcraft << 2.0 and >= 2.3.
  * sbuild-package: Default LANG/LC_ALL to C.UTF-8 (LP: #1552791).

  [ Kit Randel ]
  * Add http/s proxy support for snap builds.