@@ -6,6 +6,7 @@ launchpad-buildd (142) UNRELEASED; urgency=medium
     python-apt.
   * lpbuildd.pottery.intltool: Remove unused and Python-3-unfriendly
     string/file conditional from ConfigFile.__init__.
+  * Use Python-3-compatible forms of "print" and "except".
 
  -- Colin Watson <cjwatson@ubuntu.com>  Fri, 09 Dec 2016 16:15:49 +0000
 
